- Добавлены наброски логгирования (будут доробатываться) - Добавлена регистрация - Добавлены информационные поля в окнах регистрации и аутенфикации - Добавлены функции удаления файлов/пустых папок, создание папок - Добавлен поиск файла по текущей и вложенных директориях