@@ -2,12 +2,15 @@ package ru.geekbrains.cloud;
 
 import io.netty.channel.ChannelHandlerContext;
 import io.netty.channel.ChannelInboundHandlerAdapter;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import ru.commons.Commands;
 import ru.commons.FileInfo;
 import ru.commons.FilesListRequest;
 import ru.commons.SendFileRequest;
 import ru.geekbrains.cloud.dataBaseService.BaseAuthService;
 
+import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -17,7 +20,6 @@ import java.util.List;
 
 import static ru.commons.Commands.*;
 
-//Добавить логи
 public class ServerHandler extends ChannelInboundHandlerAdapter {
     private final String basePath  = "C:\\Users\\sAyflort\\IdeaProjects\\serverFileManager\\cloud\\";
     private String basePathClient;
@@ -26,87 +28,81 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
     private BaseAuthService baseAuthService;
     private final static int SHORT_MB_20 = 20 * 1_000_000 - 500_000;
 
+    private static final Logger LOGGER = LogManager.getLogger(ServerHandler.class);
+
     @Override
     public void channelActive(ChannelHandlerContext ctx) throws Exception {
         super.channelActive(ctx);
         this.baseAuthService = ServerApp.getBaseAuthService();
+        LOGGER.info("Пользователь подсоединился");
     }
 
     @Override
     public void channelRead(ChannelHandlerContext ctx, Object msg) throws Exception {
         if(msg instanceof SendFileRequest) {
             SendFileRequest sendFileRequest = (SendFileRequest) msg;
-
-            System.out.println(sendFileRequest.getType());
-
-            //Убрать ад из if, заменить на switch-case или работать через новый класс FileServiceManager
+            if(sendFileRequest.getType() == REG) {
+                Commands sendCmd = baseAuthService.reg(sendFileRequest.getLogin(), sendFileRequest.getPass()) == true ? REG_OK : REG_BAD;
+                ctx.channel().writeAndFlush(sendCmd);
+            }
             if(baseAuthService.isAuth(sendFileRequest.getLogin(), sendFileRequest.getPass())) {
-                if(sendFileRequest.getType() == AUTH) {
-                    ctx.channel().writeAndFlush(AUTH_OK);
-                    basePathClient = basePath + sendFileRequest.getLogin();
-                    currentPath = basePathClient;
-                    basePaths = basePathClient.split("\\\\");
-                    ctx.channel().writeAndFlush(new FilesListRequest(basePathClient));
-                    return;
-                }
-                if(sendFileRequest.getType() == DELETE_FILE) {
-                    String[] delPath = sendFileRequest.getDirectPath().split("\\\\");
-                    try {
-                        for (int i = 0; i < basePaths.length; i++) {
-                            if (!delPath[i].equals(basePaths[i])) {
-                                return;
-                            }
-                        }
-                    } catch (ArrayIndexOutOfBoundsException e) {
-                        return;
+                LOGGER.info("Получен запрос: "+sendFileRequest.getType());
+                switch (sendFileRequest.getType()) {
+                    case AUTH -> {
+                        ctx.channel().writeAndFlush(AUTH_OK);
+                        basePathClient = basePath + sendFileRequest.getLogin();
+                        currentPath = basePathClient;
+                        basePaths = basePathClient.split("\\\\");
+                        ctx.channel().writeAndFlush(new FilesListRequest(basePathClient));
                     }
-                    Files.deleteIfExists(Paths.get(sendFileRequest.getDirectPath()));
-                }
-                if(sendFileRequest.getType() == SEND_FILE) {
-                    String path;
-                    path = currentPath;
-                    Files.createDirectories(Path.of(path));
-                    path += "\\"+ sendFileRequest.getFileInfo().getFileName();
+                    case CREATE_DIRECTORY -> {
+                        String[] path = sendFileRequest.getDirectPath().split("\\\\");
+                        if(!checkRootPath(sendFileRequest.getDirectPath()) || path[path.length-1].indexOf('.') != -1) {
+                            return;
+                        }
+                        Files.createDirectories(Path.of(sendFileRequest.getDirectPath()));
+                    }
+                    case DELETE_FILE -> {
+                        if (!checkRootPath(sendFileRequest.getDirectPath()))
+                            return;
+                        Files.deleteIfExists(Paths.get(sendFileRequest.getDirectPath()));
+                    }
+                    case SEND_FILE -> {
+                        String path = currentPath;
+                        Files.createDirectories(Path.of(path));
+                        path += "\\"+ sendFileRequest.getFileInfo().getFileName();
 
-                    Files.deleteIfExists(Path.of(path));
-                    Files.createFile(Path.of(path));
-                    Files.write(Path.of(path),
-                            sendFileRequest.getFileInfo().getFile(), StandardOpenOption.APPEND);
-                }
-                if(sendFileRequest.getType() == PART_FILE) {
-                    String path = currentPath+"\\"+ sendFileRequest.getFileInfo().getFileName();
-                    Files.write(Path.of(path),
-                            sendFileRequest.getFileInfo().getFile(), StandardOpenOption.APPEND);
-                }
-                if(sendFileRequest.getType() == GET_FILE) {
-                    String[] cutPath = sendFileRequest.getFileInfo().getFilePath().split("\\\\");
-                    try {
-                        for (int i = 0; i < basePaths.length; i++) {
-                            if (!cutPath[i].equals(basePaths[i])) {
-                                return;
-                            }
-                        }
-                    } catch (ArrayIndexOutOfBoundsException e) {
+                        Files.deleteIfExists(Path.of(path));
+                        Files.createFile(Path.of(path));
+                        Files.write(Path.of(path),
+                                sendFileRequest.getFileInfo().getFile(), StandardOpenOption.APPEND);
+                    }
+                    case PART_FILE -> {
+                        String path = currentPath + "\\" + sendFileRequest.getFileInfo().getFileName();
+                        Files.write(Path.of(path),
+                                sendFileRequest.getFileInfo().getFile(), StandardOpenOption.APPEND);
+                    }
+                    case GET_FILE -> {
+                        if (!checkRootPath(sendFileRequest.getFileInfo().getFilePath()))
+                            return;
+                        sendFile(new FileInfo(Paths.get(sendFileRequest.getFileInfo().getFilePath())), SEND_FILE, ctx);
+                    }
+                    case GET_FILE_LIST -> {
+                        if (!checkRootPath(sendFileRequest.getDirectPath()))
+                            return;
+                        currentPath = sendFileRequest.getDirectPath();
+                    }
+                    case SEARCH_FILE -> {
+                        ctx.channel().writeAndFlush(new FilesListRequest(Files.walk(Paths.get(currentPath))
+                                .filter(item -> item.getFileName().toString().equals(sendFileRequest.getDirectPath()))
+                                .map(item -> new File(item.toString()))
+                                .toList()));
                         return;
                     }
-                    sendFile(new FileInfo(Paths.get(sendFileRequest.getFileInfo().getFilePath())), SEND_FILE, ctx);
-                }
-                if(sendFileRequest.getType() == GET_FILE_LIST) {
-                    String[] checkPath = sendFileRequest.getDirectPath().split("\\\\");
-                    try {
-                        for (int i = 0; i < basePaths.length; i++) {
-                            if (!checkPath[i].equals(basePaths[i])) {
-                                return;
-                            }
-                        }
-                    } catch (ArrayIndexOutOfBoundsException e) {
-                        return;
-                    }
-                    currentPath = sendFileRequest.getDirectPath();
                 }
                 ctx.channel().writeAndFlush(new FilesListRequest(currentPath));
             } else {
-                return;
+                ctx.channel().writeAndFlush(AUTH_BAD);
             }
         }
     }
@@ -114,6 +110,7 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
     @Override
     public void exceptionCaught(ChannelHandlerContext ctx, Throwable cause) throws Exception {
         super.exceptionCaught(ctx, cause);
+        LOGGER.info("Завершений программы");
     }
 
     public List<FileInfo> cutFile(FileInfo fileInfo) {
@@ -138,6 +135,7 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
     }
 
     public void sendFile(FileInfo msg, Commands command, ChannelHandlerContext ctx) {
+        LOGGER.info("Отправка файла");
         if (command == SEND_FILE) {
             List<FileInfo> listFiles = cutFile(msg);
             ctx.channel().writeAndFlush(new SendFileRequest(SEND_FILE, null, null, null, listFiles.get(0)));
@@ -147,5 +145,19 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
                 }
             }
         }
+    }
+
+    public boolean checkRootPath(String path) {
+        String[] checkPath = path.split("\\\\");
+        try {
+            for (int i = 0; i < basePaths.length; i++) {
+                if (!checkPath[i].equals(basePaths[i])) {
+                    return false;
+                }
+            }
+        } catch (ArrayIndexOutOfBoundsException e) {
+            return false;
+        }
+        return true;
     }
 }
